Fixed layout issues in feed and search

--- a/components/search/search.css
+++ b/components/search/search.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center; /* Centra orizzontalmente */
     margin-top: 50px;
+    max-height: 50px;
 }
 
 .search-form {
